--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,17 @@ repositories {
     google()
 }
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
+    implementation "com.android.support:support-compat:28.0.0"
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.google.firebase:firebase-core:17.0.1'
-    api 'com.google.android.material:material:1.1.0-alpha08'
+    implementation 'com.google.firebase:firebase-firestore:20.2.0'
+    implementation 'com.google.firebase:firebase-database:18.0.1'
+    api 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
